# EmbedEQ

./: .envSAMPLE  .gitignore  MakeFile  README.md  params.yaml  paramsSAMPLE.json  pyproject.toml
experiments/: paramsSAMPLE.json
scripts/: clustering_visualizations.py  embedding_generator.py  embedding_visualizations.py  homology_generator.py  selection_generator.py  visualizations.py
src/: clustering.py  collapse.py  config.py  data.py  embed.py  embeddings.py  homology.py  main.py  methods.py  projector.py  quotient.py  ripserer.py  selection.py  selection_criteria.py  selector.py  setup.py  topology.py  transform.py  utils.py
src/analysis/: anomoly_detection.py  collapsers.py  sensitivity.py  stability.py
src/loaders/: factory.py  plotting.py
src/models/: __init__.py  base.py  isomap.py  lle.py  phate.py  tsne.py  umap.py
src/scripts/: parallelize_clustering.py  parallelize_embeddings.py  parallelize_quotients.py  parallelize_sensitivity_analysis.py  parallelize_stability_analysis.py  parallelize_transforms.py
src/utils/: __init__.py  utils.py
src/vis/: __init__.py  clustering_visualizations.py  embedding_visualizations.py
